syntax="proto3";
package cas;

message ESSetlementBase {
    string service_id = 1;
    float quantity = 2;
    float price = 3;
    float amount = 4;
}

message ESSettlementCreate {
    ESSetlementBase settlement = 1;
}

message ESSetlement {
    string id = 1;
    ESSetlementBase settlement = 2;
    string created_at = 3;
}

message ESSettlementGet {
    string id = 1;
}

service CAS {
    rpc Create(ESSettlementCreate) returns (ESSetlement) {};
    rpc Get(ESSettlementGet) returns (ESSetlement) {};
}
